Add openAPI annotation for Register, Login, and changePassword
